--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "@expo/vector-icons": "^13.0.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.9",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-navigation-stack": "^2.10.4",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
