--- a/package.json
+++ b/package.json
@@ -12,28 +12,28 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^19.0.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-masked-view/masked-view": "0.2.9",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
-    "expo": "~48.0.9",
-    "expo-status-bar": "~1.4.4",
+    "expo": "^49.0.23",
+    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.71.4",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
+    "react-native": "0.72.10",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.19.6",
     "react-navigation-stack": "^2.10.4",
-    "styled-components": "^5.3.9",
-    "react-native-gesture-handler": "~2.9.0",
-    "@react-native-masked-view/masked-view": "0.2.8",
-    "react-native-web": "~0.18.10",
-    "@expo/webpack-config": "^18.0.1"
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
