--- a/package.json
+++ b/package.json
@@ -12,13 +12,11 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@expo/vector-icons": "^13.0.0",
-
     "@expo/webpack-config": "^19.0.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-masked-view/masked-view": "0.2.9",
-
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
@@ -29,15 +27,14 @@
     "msnodesqlv8": "^4.1.0",
     "mssql": "^10.0.1",
     "react": "18.2.0",
-
     "react-native": "0.72.10",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.19.6",
-
     "react-navigation-stack": "^2.10.4",
     "styled-components": "^5.3.9"
   },
