--- a/package.json
+++ b/package.json
@@ -30,14 +30,15 @@
     "react-native": "0.72.10",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-google-places-autocomplete": "^2.5.6",
-    "react-native-maps": "^1.13.0",
+    "react-native-maps": "1.7.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.19.6",
     "react-navigation-stack": "^2.10.4",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "expo-location": "~16.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
