--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "eject": "expo eject"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -15,6 +16,7 @@
     "@expo/webpack-config": "^19.0.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
+    "@react-native-community/geolocation": "^3.2.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-masked-view/masked-view": "0.2.9",
     "@react-native-material/core": "^1.3.7",
@@ -22,23 +24,31 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
+    "@reduxjs/toolkit": "^2.2.3",
     "expo": "^49.0.23",
+    "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
     "msnodesqlv8": "^4.1.2",
     "mssql": "^10.0.2",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.72.10",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-geocoding": "^0.5.0",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "1.7.1",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-status-bar-height": "^2.6.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.19.6",
     "react-navigation-stack": "^2.10.4",
-    "styled-components": "^5.3.9",
-    "expo-location": "~16.1.0"
+    "react-redux": "^9.1.1",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
