--- a/package.json
+++ b/package.json
@@ -16,25 +16,31 @@
     "@expo/webpack-config": "^19.0.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/geolocation": "^3.2.1",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-native-masked-view/masked-view": "0.2.9",
     "@react-native-material/core": "^1.3.7",
+    "@react-native/babel-preset": "^0.74.83",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
     "expo": "^49.0.23",
     "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
     "haversine": "^1.1.1",
+    "iconsax-react-native": "^0.0.8",
     "msnodesqlv8": "^4.1.2",
     "mssql": "^10.0.2",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.72.10",
     "react-native-dotenv": "^3.4.11",
+    "react-native-fbsdk-next": "^13.0.0",
     "react-native-geocoding": "^0.5.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.12.0",
@@ -49,7 +55,8 @@
     "react-native-web": "~0.19.6",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^9.1.1",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
