--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/styled-components": "^5.1.26",
     "@types/styled-components-react-native": "^5.2.1"
   },
