--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-native-masked-view/masked-view": "0.2.9",
     "@react-native-material/core": "^1.3.7",
     "@react-native/babel-preset": "^0.74.83",
+    "@react-native/metro-config": "^0.74.83",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -55,7 +56,8 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.19.6",
     "react-navigation-stack": "^2.10.4",
-    "react-redux": "^9.1.1",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
     "styled-components": "^5.3.9",
     "typescript": "^5.1.3"
   },
