--- a/package.json
+++ b/package.json
@@ -10,62 +10,65 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "^19.0.0",
-    "@mui/icons-material": "^5.11.11",
-    "@mui/material": "^5.11.14",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@expo/vector-icons": "^14.0.1",
+    "@expo/webpack-config": "^19.0.1",
+    "@mui/icons-material": "^5.15.17",
+    "@mui/material": "^5.15.17",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/geolocation": "^3.2.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-google-signin/google-signin": "^11.0.1",
-    "@react-native-masked-view/masked-view": "0.2.9",
+    "@react-native-masked-view/masked-view": "0.3.1",
     "@react-native-material/core": "^1.3.7",
     "@react-native/babel-preset": "^0.74.83",
     "@react-native/metro-config": "^0.74.83",
-    "@react-navigation/bottom-tabs": "^6.5.7",
-    "@react-navigation/native": "^6.1.6",
-    "@react-navigation/native-stack": "^6.9.12",
-    "@react-navigation/stack": "^6.3.16",
-    "@reduxjs/toolkit": "^2.2.3",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
+    "@reduxjs/toolkit": "^2.2.4",
     "axios": "^1.6.8",
-    "expo": "^49.0.23",
-    "expo-location": "~16.1.0",
-    "expo-status-bar": "~1.6.0",
+    "expo": "~51.0.5",
+    "expo-location": "~17.0.1",
+    "expo-status-bar": "~1.12.1",
     "haversine": "^1.1.1",
     "iconsax-react-native": "^0.0.8",
-    "msnodesqlv8": "^4.1.2",
+    "msnodesqlv8": "^4.2.1",
     "mssql": "^10.0.2",
     "prop-types": "^15.8.1",
-    "react": "18.2.0",
-    "react-native": "0.72.10",
+    "react": "18.3.1",
+    "react-dom": "^18.3.1",
+    "react-native": "0.74.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-fbsdk-next": "^13.0.0",
     "react-native-geocoding": "^0.5.0",
     "react-native-geolocation-service": "^5.3.1",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "~2.16.2",
     "react-native-google-places-autocomplete": "^2.5.6",
-    "react-native-maps": "1.7.1",
+    "react-native-maps": "1.15.1",
     "react-native-maps-directions": "^1.9.0",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-status-bar-height": "^2.6.0",
+    "react-native-svg": "^15.2.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.19.6",
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-web": "~0.19.11",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^9.1.2",
+    "reactstrap": "^9.2.2",
     "redux": "^5.0.1",
-    "styled-components": "^5.3.9",
-    "typescript": "^5.1.3"
+    "styled-components": "^6.1.11",
+    "typescript": "^5.4.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.24.5",
     "@types/react-native-vector-icons": "^6.4.18",
-    "@types/styled-components": "^5.1.26",
-    "@types/styled-components-react-native": "^5.2.1"
+    "@types/styled-components": "^5.1.34",
+    "@types/styled-components-react-native": "^5.2.5"
   },
   "private": true
 }
